--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^1.1.0-beta.17",
     "vue": "^3.2.6"
   },
   "devDependencies": {
