--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dictify",
+  "name": "soora",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -18,5 +18,10 @@
     "tailwindcss": "^2.2.15",
     "vite": "^2.5.4",
     "vue-router": "^4.0.11"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
