--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "0.0.11",
     "element-plus": "^1.1.0-beta.17",
+    "sass-loader": "^12.1.0",
     "vue": "^3.2.6"
   },
   "devDependencies": {
@@ -15,6 +17,7 @@
     "@vue/compiler-sfc": "^3.2.6",
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
+    "sass": "^1.42.1",
     "tailwindcss": "^2.2.15",
     "vite": "^2.5.4",
     "vue-router": "^4.0.11"
