--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
+    "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.17",
     "sass-loader": "^12.1.0",
     "vue": "^3.2.6"
