--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.17",
     "sass-loader": "^12.1.0",
-    "vue": "^3.2.6"
+    "vue": "^3.2.6",
+    "vue3-autocounter": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.1",
