--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "json": "json-server data/db.json --w"
   },
   "dependencies": {
     "@element-plus/icons": "0.0.11",
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.17",
+    "moment": "^2.29.1",
     "sass-loader": "^12.1.0",
     "vue": "^3.2.6",
     "vue3-autocounter": "^1.0.6"
