--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons": "0.0.11",
     "axios": "^0.21.4",
     "element-plus": "^1.1.0-beta.17",
+    "json-server": "^0.17.0",
     "moment": "^2.29.1",
     "sass-loader": "^12.1.0",
     "vue": "^3.2.6",
