--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^1.1.0-beta.20",
     "json-server": "^0.17.0",
     "moment": "^2.29.1",
+    "pusher-js": "^7.0.3",
     "vue": "^3.2.6",
     "vue3-autocounter": "^1.0.6"
   },
